# GRA-Government-Simulation-for-South-Ossetia-Kambolov-Cabinet-

./: GRA-Government-Simulation-South-Ossetia.rar  LICENSE  README.md  config.example.yaml  paper-ru.tex  paper.tex  pyproject.toml
gra_government/: __init__.py  config.py  logger.py
gra_government/agents/: __init__.py  base.py  demography.py  economy.py  infrastructure.py  media.py  security.py  social_stability.py
gra_government/cli/: __init__.py  main.py
gra_government/core/: __init__.py  asi_metric_space.py  hierarchical_stability.py  subject_swap.py
gra_government/llm/: __init__.py  interface.py
gra_government/reporting/: __init__.py  reporter.py
gra_government/scenario/: __init__.py  simulator.py  state_model.py
gra_government/swarm/: __init__.py  orchestrator.py
